# sublime-mcp

./: Dockerfile  LICENSE  README.md  bridge.py  harness.py  plugin.py  pyproject.toml  sublime-mcp  sublime_mcp.py  unittesting.json
.github/workflows/: harness-smoke.yml  headless.yml  image-smoke.yml  tests.yml
docker/: entrypoint.sh
skills/sublime-mcp/: SKILL.md  install.md
tests/: headless_smoke.py  test_harness_smoke.py  test_helpers.py  test_image_smoke.py  test_image_tag.py  test_logging.py  test_smoke.py
