[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sublime-mcp-harness"
version = "0.1.0"
description = "Stdio MCP harness that runs sublime-mcp inside a Docker container."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Stefano Baghino" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
# stdlib-only at runtime; docker is a system dependency, not a Python one.
dependencies = []

[project.scripts]
sublime-mcp = "harness:main"

[project.urls]
Homepage = "https://github.com/stefanobaghino/sublime-mcp"
Issues = "https://github.com/stefanobaghino/sublime-mcp/issues"

[tool.setuptools]
# v1 ships as an editable install from a source checkout (`uv tool
# install --editable .`). The harness reads Dockerfile,
# docker/entrypoint.sh, and plugin.py from
# `Path(__file__).parent`, so the source layout is what gets used at
# runtime. A proper package layout for non-editable wheels (and `uvx`
# from a git URL) can come when PyPI distribution becomes a goal.
py-modules = ["harness"]
